package BatteryLogic;

public interface ButtonCommand {
    void execute(InteractionHandler handler);
}
